// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatError should format errors 0 1`] = `
"\\"test\\"

Expected number but got: 123
"
`;

exports[`formatError should format errors 1 1`] = `
"\\"test\\"

Expected string but got: 123
"
`;

exports[`formatError should format errors 2 1`] = `
"\\"test\\"

Expected string but got: [
  123,
  2,
  true
]
"
`;

exports[`formatError should format errors 3 1`] = `
"\\"test\\"

Expected number but got: {
  \\"foo\\": \\"bar\\"
}
"
`;

exports[`validateConfig should catch unknown options 1`] = `
Array [
  "\\".autorc\\"

Found unknown configuration keys: foo
",
]
`;

exports[`validateConfig should not fail w/plugin configuration 1`] = `
Array [
  "\\".autorc\\"

Found unknown configuration keys: labels.0.releasepe
",
]
`;

exports[`validateConfig should not go too deep 1`] = `
Array [
  "\\".autorc\\"

Found unknown configuration keys: labelz
",
]
`;

exports[`validateConfig should validate plugin configuration 1`] = `
Array [
  "\\"npm.label\\"

Expected string but got: 123
",
]
`;

exports[`validatePlugin should validate plugin configuration - array of configurations 1`] = `
Array [
  "\\"test-plugin\\"

Found unknown configuration keys: named
",
]
`;

exports[`validatePlugin should validate plugin configuration - array of configurations 2`] = `
Array [
  "\\"test-plugin\\"

Found unknown configuration keys: 0.named
",
]
`;

exports[`validatePlugin should validate plugin configuration - array of objects 1`] = `
Array [
  "\\"test-plugin\\"

Found unknown configuration keys: exclude.1.extra
",
]
`;

exports[`validatePlugin should validate plugin configuration - nested objects 1`] = `
Array [
  "\\"test-plugin\\"

Found unknown configuration keys: types.doc
",
]
`;

exports[`validatePlugin should validate plugin configuration - union 1`] = `
Array [
  "\\"test-plugin\\"

Found missing configuration keys: when using auth you must also provide channels
",
]
`;
